test/errors/template.008.tmpl
<TMPL_VAR [% $valid and $a %]>
<TMPL_VAR [% length($a) > 0 %]>
<TMPL_VAR [% invalid_identifier and $b %]>
